--- a/FE-U2-S2-L2.html
+++ b/FE-U2-S2-L2.html
@@ -7,12 +7,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="./assets/dist/css/style.min.css" />
+
     <title>Travel Agency</title>
   </head>
 
